<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:paddingHorizontal="16dp"
    tools:context=".features.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overlay_permission_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/overlay_permission_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/allow_overlay_permission"
            app:layout_constraintBottom_toBottomOf="@id/overlay_permission_button"
            app:layout_constraintEnd_toStartOf="@id/overlay_permission_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/overlay_permission_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/overlay_permission_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant_permission"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/call_banner_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_call_popup"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/overlay_permission_layout"
        app:layout_constraintTop_toBottomOf="@id/overlay_permission_layout" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_mode_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        app:layout_constraintTop_toBottomOf="@id/call_banner_switch" />
</androidx.constraintlayout.widget.ConstraintLayout>