<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp"
    android:paddingHorizontal="8dp">

        <!-- App Icon -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_icon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!-- App Details -->

    <!-- Action Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/open_app_info"
        app:layout_constraintStart_toEndOf="@id/app_icon"
        app:layout_constraintTop_toTopOf="@id/app_icon">

        <!-- App Name -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name_list"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- App Status -->
        <TextView
            android:id="@+id/app_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/open_app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/see_more"
        android:drawableEnd="@drawable/arrow_forward"
        android:textColor="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/app_info_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_info_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>
